# powersort

./: CMakeLists.txt  LICENSE  README.md  create-plots.nb  experiments.sh
src/: CMakeLists.txt  README.md  algorithms.h  datatypes.h  inputs.h  main.cpp  welford.h
src/sorts/: bottom_up_mergesort.h  merging.h  merging_3way.h  merging_multiway.h  peeksort.h  powersort.h  powersort_4way.h  quicksort.h  timsort.h  top_down_mergesort.h  trotsort.h
src/test/: CMakeLists.txt  checked_vector.h  gtest.cpp  gtest.h  sorter_harness.h  tests.cpp
src/test/lib/googletest/: CTestTestfile.cmake  Makefile  cmake_install.cmake  googletest-distribution.cbp
src/test/lib/googletest/googlemock/: CTestTestfile.cmake  Makefile  cmake_install.cmake  gmock.cbp
src/test/lib/googletest/googlemock/gtest/: CTestTestfile.cmake  Makefile  cmake_install.cmake  gtest.cbp
